@@ -1,21 +1,9 @@
-# Telephone / Contact Book
+# Import this database to your local server
 
-*Home*
-![Home](https://user-images.githubusercontent.com/89692428/140825950-27ea563a-7c3d-4915-82ab-605cf6daf322.png)
+On local server create your user account or use root,  
+Open program file in your editor and in package "Controller" find class "Functions",  
+Change login credentials if you need and url to database.
 
-*User*
-![User](https://user-images.githubusercontent.com/89692428/140825993-8ca9ea6c-0c53-46e4-9cdd-dfb0ff47ea8c.png)
+![Database Credentials](https://user-images.githubusercontent.com/89692428/141198088-29445214-d652-4eee-a20e-1c0cddcf1511.png)
 
-*Login*
-![Login](https://user-images.githubusercontent.com/89692428/140826010-b2012083-f461-4925-b655-dfba901472e7.png)
-
-*Admin*
-![Admin](https://user-images.githubusercontent.com/89692428/140826030-a7129b1c-bc3f-4498-be6e-86df38b47104.png)
-
-<hr>
-
-### To run this java program, you must pass arguments to VM or command prompt.
-```bash
---module-path "LOCATION OF javafx-sdk-16\lib IN YOUR PC" --add-modules javafx.controls,javafx.fxml
-```
 
